--- a/MultiThreading_Assignment/View/UIView.xaml
+++ b/MultiThreading_Assignment/View/UIView.xaml
@@ -28,20 +28,17 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
 
-        <Label Content="No. of custommers  :" Grid.Column="0" Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Label Content="No. of Threads  :" Grid.Column="0" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Label Content="Enter number of Customers and threads for which you want to check the time required :" Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="Black" FontSize="14" FontWeight="Bold"/>
+        
+        <Label Content="No. of custommers  :" Grid.Column="0" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="Black"/>
+        <Label Content="No. of Threads  :" Grid.Column="0" Grid.Row="2" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="Black"/>
 
         <TextBox Text="{Binding NoOfCustommers, Mode=TwoWay}"
                  Style="{StaticResource MaterialDesignFloatingHintTextBox}" materialDesign:HintAssist.Hint="No. of Customers" 
-                 HorizontalContentAlignment="Center" Grid.Column="1" Grid.Row="0" Width="100" HorizontalAlignment="Center" VerticalAlignment="Center" Background="White"/>
+                 HorizontalContentAlignment="Center" Grid.Column="1" Grid.Row="1" Width="100" HorizontalAlignment="Center" VerticalAlignment="Center" Background="White"/>
         <TextBox Text="{Binding NoOfThreads, Mode=TwoWay}"    
                  Style="{StaticResource MaterialDesignFloatingHintTextBox}" materialDesign:HintAssist.Hint="No. of Threads" 
-                 HorizontalContentAlignment="Center" Grid.Column="1" Grid.Row="1" Width="100" HorizontalAlignment="Center" VerticalAlignment="Center" Background="White"/>
-
-        <TextBox Name="TotalTime" ToolTip="Total time taken by Popup Window" IsReadOnly="True"
-                   Style="{StaticResource MaterialDesignFloatingHintTextBox}" materialDesign:HintAssist.Hint="Time for which Popup Window was open"
-                   Text="00:00:00" TextAlignment="Center" Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="2" Width="200" 
-                   HorizontalAlignment="Center" VerticalAlignment="Center" FontWeight="Bold" Background="#FFF1F1F1"/>
+                 HorizontalContentAlignment="Center" Grid.Column="1" Grid.Row="2" Width="100" HorizontalAlignment="Center" VerticalAlignment="Center" Background="White"/>
 
         <Button Content="Start"     Command="{Binding StartOP}"  
                 Style="{StaticResource MaterialDesignRaisedAccentButton}" materialDesign:ShadowAssist.ShadowDepth="Depth3" materialDesign:RippleAssist.Feedback="#DD000000"
